--- a/Dev/BeekWebsite/App_Themes/Default.css
+++ b/Dev/BeekWebsite/App_Themes/Default.css
@@ -3,7 +3,14 @@
 	margin: 0;
 	border: 0;
 	width: 100%;
-	height:100%;	
-	background: #6c6e79 url(../pics/bgndStripes.jpg);
-	font-family:"century gothic";	
+	height:100%;
+	background-color: #123123;
+	font-family:"century gothic";
+}
+
+#logo
+{
+	background-image: url(".\App_GlobalResources.png");
+	width: 100px;
+	height:100px;
 }
