--- a/Dev/BeekWebsite/css/Default.css
+++ b/Dev/BeekWebsite/css/Default.css
@@ -5,7 +5,7 @@
 	border: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #272222;
+	background-color: /*white;*/#272222;
 	background-image: url(../pics/bgndStripes.png);
 	font-family: "century gothic";
 }
@@ -19,11 +19,37 @@
 #header
 {
 	height: 150px;
+	background-color: gray;
 }
 #logo
 {
-	background-color: white;
-	background-image: url(".\App_GlobalResources.png");
-	width: 100px;
+	width: 150px;
 	height:150px;
+	float: left;
+	margin-left: 10px;
+}
+#navBlocks
+{
+	margin-top: 10px;
+	margin-left:-10px;
+	height: 140px;	
+	background-color: White;
+	float: left;
+	z-index: -1;
+}
+.navblock
+{
+	float: left;
+	height: 140px;
+	width: 100px;
+	z-index: inherit;
+}
+.shadow
+{
+	background: url(../pics/shadow.png) no-repeat bottom right;	
+	z-index: 1;
+}
+.shadow img
+{
+	margin-left: -10px;
 }
