--- a/Dev/BeekWebsite/css/Default.css
+++ b/Dev/BeekWebsite/css/Default.css
@@ -9,12 +9,13 @@
 	background-image: url(../pics/bgndStripes.png);
 	font-family: "century gothic";
 }
-#centerWrapper
+.center
 {
 	margin-left: auto;
 	margin-right: auto;
-	width: 600px;
+	width: 780px;
 }
+
 
 #header
 {
