--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/Home/index.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/Home/index.haml
@@ -1,5 +1,4 @@
 ﻿^title += "- home - index"
-- Boris.NHaml.Helpers.StyleSheetHelper.AddStyleSheet("index");
+- Boris.Utils.NHaml.Helpers.StyleSheetHelper.AddStyleSheet("index");
 %h1
   content
-
