--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_styles.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_styles.haml
@@ -1,2 +1,2 @@
-﻿- Boris.NHaml.Helpers.StyleSheetHelper.AddStyleSheet("site")
-= Boris.NHaml.Helpers.StyleSheetHelper.OutputStyleSheet()
+﻿- Boris.Utils.NHaml.Helpers.StyleSheetHelper.AddStyleSheet("site")
+= Boris.Utils.NHaml.Helpers.StyleSheetHelper.OutputStyleSheet()
