--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_scripts.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_scripts.haml
@@ -1,4 +1,5 @@
 ﻿%script{ src= "http://ajax.microsoft.com/ajax/jquery/jquery-1.3.2.min.js" type="text/javascript"}
-- Boris.Utils.NHaml.Helpers.ScriptHelper.AddScript("jquery.tpl_layout1.1.4")
-- Boris.Utils.NHaml.Helpers.ScriptHelper.AddScript("site")
-= Boris.Utils.NHaml.Helpers.ScriptHelper.OutputScripts()
+%script{ src= "http://ajax.microsoft.com/ajax/jquery.validate/1.5.5/jquery.validate.min.js" type="text/javascript"}
+- ScriptHelper.AddScript("xVal.jquery.validate.js")
+- ScriptHelper.AddScript("site")
+= ScriptHelper.OutputScripts()
