--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_scripts.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_scripts.haml
@@ -2,4 +2,4 @@
 %script{ src= "http://ajax.microsoft.com/ajax/jquery.validate/1.5.5/jquery.validate.min.js" type="text/javascript"}
 - ScriptHelper.AddScript("xVal.jquery.validate.js")
 - ScriptHelper.AddScript("site")
-= ScriptHelper.OutputScripts()
+!= ScriptHelper.OutputScripts()
