- Testing out validation attributes on model classes - Cleaned out references - Added xVal, will first try out mvc2's validation system, but keeping the libraries and references in case the built in system fails

--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_styles.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_styles.haml
@@ -1,2 +1,2 @@
-﻿- Boris.Utils.NHaml.Helpers.StyleSheetHelper.AddStyleSheet("site")
-!= Boris.Utils.NHaml.Helpers.StyleSheetHelper.OutputStyleSheet()
+﻿- StyleSheetHelper.AddStyleSheet("site")
+!= StyleSheetHelper.OutputStyleSheet()
