- Ported existing logic for userRepository and catalogrepository - Prepared implementations for Db4o based implementations of repositories

--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/account/Account.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/account/Account.haml
@@ -3,4 +3,4 @@
 - ScriptSheetHelper.AddScript("subscribe");
 %h2 Create Account
   %form{method="post"}
-    = Html.FormField<OpenAccount>
+    = Html.DisplayFor(Model.
