--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_header.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_header.haml
@@ -1,2 +1,5 @@
 ﻿#logo
   %a{href="#"}
+    %img{alt="Beekweb logo depicting a letter B" src="src="../../Content/pics/logo.png"}
+  ul.navBlock.activeNavBlock
+    li
