--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_header.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_header.haml
@@ -1,5 +1,29 @@
 ﻿#logo
   %a{href="#"}
-    %img{alt="Beekweb logo depicting a letter B" src="src="../../Content/pics/logo.png"}
-  ul.navBlock.activeNavBlock
-    li
+    %img{alt="Beekweb logo depicting a letter B" src="../../content/pics/logo.png"}
+%ul.navBlock.activeNavBlock
+  %li
+    %a{href="#"}
+      Beek
+      %ul
+        %li
+          test
+        %li
+          test2
+%ul.navBlock
+  %li
+    %a{href="#"}
+      Search
+      %ul
+        %li
+          test
+        %li
+          test2
+%li
+    %a{href="#"}
+      My Stuff
+      %ul
+        %li
+          test
+        %li
+          test2
