--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_header.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/shared/_header.haml
@@ -5,25 +5,19 @@
   %li
     %a{href="#"}
       Beek
-      %ul
-        %li
-          test
-        %li
-          test2
+  %li
+    %ul
+      %li
+        Add
+      
 %ul.navBlock
   %li
     %a{href="#"}
       Search
-      %ul
-        %li
-          test
-        %li
-          test2
-%li
+      
+      
+%ul.navBlock          
+  %li
     %a{href="#"}
       My Stuff
-      %ul
-        %li
-          test
-        %li
-          test2
+      
