- added framework for ajax powered search

--- a/Boris.BeekProject/Boris.BeekProject.Website/Views/Home/index.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Views/Home/index.haml
@@ -1,5 +1,6 @@
 ﻿^title += "- home - index"
 - StyleSheetHelper.AddStyleSheet("index");
+- ScriptHelper.AddScript("jquery.timer.idle.min");
 - ScriptHelper.AddScript("search");
 %h1
   search
