--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/_myStuffAnonymous.haml
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/_myStuffAnonymous.haml
@@ -4,5 +4,4 @@
     %a{href="#"}
       Log In
   %li
-    %a{href="#"}
-      Register
+    != Html.ActionLink<AccountController>(c=>c.Action(Model.User.Id), "Register")
