--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
@@ -16,8 +16,10 @@
       <!--#include file="header.aspx"-->
     </div>
     <div id="content">
-      <asp:ContentPlaceHolder ID="Main" runat="server"/>
-    </div>    
+      <div id="scrollWrapper">
+        <asp:ContentPlaceHolder ID="Main" runat="server"/>
+      </div>
+    </div>
   </div>
   <%=Html.PrintScript("jquery-1.3.2.min.js")%>
 </body>
