--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <%@ Master Language="C#" Inherits="System.Web.Mvc.ViewMasterPage<BaseBeekViewModel>" %>
-<%
-  Html.AddTitlePart("Beek");
-%>
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head runat="server">
   <title>Beek <asp:ContentPlaceHolder ID="Title" runat="server"/></title>
@@ -12,9 +9,7 @@
 </head>
 <body>
   <div id="page">
-    <div id="header">
-      <!--#include file="header.aspx"-->
-    </div>
+    <%Html.RenderPartial("header", ViewData);%>
     <div id="content">
       <div id="scrollWrapper">
         <asp:ContentPlaceHolder ID="Main" runat="server"/>
@@ -22,5 +17,6 @@
     </div>
   </div>
   <%=Html.PrintScript("jquery-1.3.2.min.js")%>
+  <asp:ContentPlaceHolder ID="Js" runat="server"/>
 </body>
 </html>
