--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/content/css/site.css
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/content/css/site.css
@@ -45,12 +45,20 @@
 	z-index: -1;
 	border-bottom: 1px solid black;
 }
+/* Because the navblocks' width is in %, we get a rounding error so the total != 100%       */
+/* All browsers have a different way of handling this error so we cheat our way out         */
+/* by making the background the same color as the foreground, when the last box is selected */
+#navBlocks.lastNavBlockSelected
+{
+	background-color: #E70505;
+}
 .navBlock
 {
 	float: left;
 	height: 140px;
 	width: 33%;
 	border-left: 1px solid black;
+	background-color: White;
 }
 .navTitle
 {
@@ -78,6 +86,7 @@
 .activeNavBlock
 {
 	background-color: #E70505;
+	height: 141px;
 }
 .activeNavBlock .navTitle
 {
@@ -87,10 +96,30 @@
 {
 	color: Black;
 }
+/************navLogin***********************/
+#navLoginForm
+{
+	text-align: left;
+	float: left;
+	width: 100%;
+}
+#navLoginInputs
+{
+	float: left;
+	padding-right: -32px;
+	padding-left: 10px;
+}
+#navLoginForm input[type="image"]
+{	
+	float: right;
+	width: 32px;
+}
+
+
 /************CONTENT****************************/
 #content
 {
 	margin-top: -100px;
 	padding: 100px 10px 10px 10px;	
-	background-color: Orange;
-}
+	/*background-color: Orange;*/
+}p;px
