--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<%@ Master Language="C#" Inherits="System.Web.Mvc.ViewMasterPage<BaseBeekViewModel>" %>
+<%@ Master Language="C#" Inherits="System.Web.Mvc.ViewMasterPage<BaseBeekViewData>" %>
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head runat="server">
   <title>Beek <asp:ContentPlaceHolder ID="Title" runat="server"/></title>
