--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
@@ -1,22 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<%@ Master Language="C#" Inherits="System.Web.Mvc.ViewMasterPage" %>
+<%@ Master Language="C#" Inherits="System.Web.Mvc.ViewMasterPage<BaseBeekViewData>" %>
+
 <html xmlns="http://www.w3.org/1999/xhtml" >
-<head runat="server">
-  <title>Beek <asp:ContentPlaceHolder ID="Title" runat="server"/></title>
-  <%=Html.PrintStyleSheet("site")%>
-  <asp:ContentPlaceHolder ID="Css" runat="server"/>  
-</head>
-<body>
-  <div id="page">
-    <%Html.RenderAction<HeaderController>(a => a.Header());%>
-    <div id="content">
-      <div id="scrollWrapper">
-        <asp:ContentPlaceHolder ID="Main" runat="server"/>
-      </div>
-    </div>    
-  </div>
-  <%=Html.PrintScript("jquery-1.3.2.min")%>
-  <asp:ContentPlaceHolder ID="Js" runat="server"/>
-</body>
+  <head runat="server">
+    <title>Beek <asp:ContentPlaceHolder ID="Title" runat="server"/></title>
+    <%=Html.PrintStyleSheet("site")%>
+    <asp:ContentPlaceHolder ID="Css" runat="server"/>  
+  </head>
+  <body>
+    <div id="page">
+      <%Html.RenderAction<HeaderController>(a => a.Header(Model.NavBlock));%>
+      <div id="content">
+        <div id="scrollWrapper">
+          <asp:ContentPlaceHolder ID="Main" runat="server"/>
+        </div>
+      </div>    
+    </div>
+    <%=Html.PrintScript("jquery-1.3.2.min")%>
+    <asp:ContentPlaceHolder ID="Js" runat="server"/>
+  </body>
 </html>
