--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Beek <asp:ContentPlaceHolder ID="Title" runat="server"/></title>
     <%=Html.PrintStyleSheet("site")%>
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" >
     <asp:ContentPlaceHolder ID="Css" runat="server"/>  
   </head>
   <body>
@@ -17,7 +18,8 @@
         </div>
       </div>    
     </div>
-    <%=Html.PrintScript("jquery-1.3.2.min")%>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
     <asp:ContentPlaceHolder ID="Js" runat="server"/>
   </body>
 </html>
