--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/content/css/beek.css
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/content/css/beek.css
@@ -1,13 +1,17 @@
 ﻿/* Thumb */
 .beekThumb
 {
-	float: left;
 	margin: 5px 20px 5px 5px;
 }
+
 .beekThumb .coverArt
 {
 	float: left;
 	margin-right: 5px;
+}
+.beekThumb.beekThumbInfo
+{
+	float :left;
 }
 .beekThumb .title
 {
@@ -18,7 +22,6 @@
 {
 	font-size: small;
 }
-
 
 /* Detail */
 #beekDetail
