--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/views/shared/Site.Master
@@ -20,6 +20,7 @@
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+    <div style="display:none" id="applicationRoot"><%=Request.ApplicationPath%></div>
     <asp:ContentPlaceHolder ID="Js" runat="server"/>
   </body>
 </html>
